@@ -1,3 +1,6 @@
+* optionally only send alerts when the state changes ('edgetrigger')
+  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
+
 2005/9/12 -- released version 20050912_trunk
 
 2005/9/11 -- released version 20050911_trunk
